--- a/WebApplication-BusTimeline/WebApplication-BusTimeline.csproj
+++ b/WebApplication-BusTimeline/WebApplication-BusTimeline.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>WebApplication_BusTimeline</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WebAPI\WebAPI.csproj" />
+  </ItemGroup>
+
 </Project>
