Modified Login Register

--- a/WebApplication-BusTimeline/appsettings.json
+++ b/WebApplication-BusTimeline/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-8LUIM71\\SQLEXPRESS;Database=Timetable;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
