--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,8 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-8LUIM71;Database=Timetable;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-8LUIM71\\SQLEXPRESS;Database=Timetable;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;"
   },
-
 
   "Logging": {
     "LogLevel": {
