--- a/WebApplication-BusTimeline/WebApplication-BusTimeline.csproj
+++ b/WebApplication-BusTimeline/WebApplication-BusTimeline.csproj
@@ -8,6 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.12.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\WebAPI\WebAPI.csproj" />
   </ItemGroup>
 
