--- a/WebApplication-BusTimeline/appsettings.json
+++ b/WebApplication-BusTimeline/appsettings.json
@@ -1,7 +1,7 @@
 {
-//  "ConnectionStrings": {
-//   "DefaultConnection": "Server=DESKTOP-8LUIM71\\SQLEXPRESS;Database=BusTimetable;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;"
-//  },
+  //  "ConnectionStrings": {
+  //   "DefaultConnection": "Server=DESKTOP-8LUIM71\\SQLEXPRESS;Database=BusTimetable;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;"
+  //  },
 
   "Logging": {
     "LogLevel": {
@@ -9,5 +9,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "SiteUser": {
+    "Username": "Milena",
+    "Password": "SM1234"
+  }
 }
